Ajustes CSS y auto-resize

--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
         <div id="x" class="letter">X</div>
         <div id="y" class="letter">Y</div>
         <div id="z" class="letter">Z</div>
-        <p id="letter-position"></p>
-        <p id="question"></p>
-        <button id="ok-button">OK</button>
+        <div class="donut-center">
+            <p id="letter-position"></p>
+            <p id="question"></p>
+            <button id="ok-button">OK</button>
+        </div>
     </div>
     <div class="right-side">
         <div class="pasapalabra-info">
